fixed some issues with images being too big

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -54,6 +54,9 @@ article
 		background: white
 		padding: 2em
 
+		img
+			max-width: 100%
+
 		h1, h2, h3, h4, h5, h6
 			color: colorHeader
 			font-weight: 600
@@ -179,7 +182,8 @@ article
 	.home:hover
 	.home.active
 		color: white
-		background: colorJS url('/images/chainy-logo.svg') top center
+		background: colorJS url('/images/chainy-logo.svg') center center no-repeat
+		background-size: 90%
 		text-shadow: 1px 0px 2px black
 
 	.bundles:hover
